--- a/Features/Features.html
+++ b/Features/Features.html
@@ -13,10 +13,10 @@
                 <h3>LOGO</h3>
             </div>
             <ul class="navigations">
-                <li><a href="../HomePage/Index.html">HOME</a></li>
+                <li><a href="../Index.html">HOME</a></li>
                 <li> <a class="current" href="">FEATURES</a></li>
-                <li><a href="../Blog/Index.html">BLOG</A></li>
-                <li><a href="../About us/Index.html">ABOUT US</a></li>
+                <li><a href="Blog/Index.html">BLOG</A></li>
+                <li><a href="About us/Index.html">ABOUT US</a></li>
             </ul>
         </nav>
 
