--- a/Features/Features.html
+++ b/Features/Features.html
@@ -15,8 +15,8 @@
             <ul class="navigations">
                 <li><a href="../Index.html">HOME</a></li>
                 <li> <a class="current" href="">FEATURES</a></li>
-                <li><a href="Blog/Index.html">BLOG</A></li>
-                <li><a href="About us/Index.html">ABOUT US</a></li>
+                <li><a href="../Blog/Index.html">BLOG</A></li>
+                <li><a href="../About us/Index.html">ABOUT US</a></li>
             </ul>
         </nav>
 
