--- a/Features/Features.html
+++ b/Features/Features.html
@@ -10,7 +10,7 @@
 
         <nav class="navBarmain" id="mainNav">
             <div class="Logo">
-                <h3>LOGO</h3>
+                <h2 class="h21">Learn</h2><h2 class="h22">Cloud</h2>
             </div>
             <ul class="navigations">
                 <li><a href="../index.html">HOME</a></li>
@@ -53,5 +53,7 @@
                    coding everything from mobile apps and enterprise software to big data applications and server-side technologies.</p>
             </div>
         </div>
+        <hr>
+        
     </body>
 </html>
