--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <input class="Buttonseemore" type="button" onclick="window.open('Blog/Blog.html','_self')" value="See More">
                 </p>
             </div>
-            <img src="Features/drawable/yurs2.jpg" alt="Temporary" width="623">
+            <img src="Features/drawable/html.jpg" alt="Temporary" width="623">
         </section>
         <hr>
         <footer>
