--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section class="section1">
             <div class="sec1div1">
                 <div style="display: inline-block; margin-left: 100px;">
-                    <img src="drawable/Featured3.png" height="352px"><br>
-                    <img src="drawable/Featured.avif" width="311.105">
-                    <img src="drawable/Featured2.jpg" width="311.105" height="186.84">
+                    <img src="Features/drawable/html.jpg" height="352px"><br>
+                    <img src="Features/drawable/css.jpg" width="335" height="186.84">
+                    <img src="Features/drawable/java.jpg" width="335" height="186.84">
                 </div>
                 <div class="sec1div2">
                     <h1>Features</h1><br>
