--- a/About us/About.html
+++ b/About us/About.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="Sheets/styles.css">
         <script src="Sheets/script.js"></script>
         <link rel="script" href="Sheets/script.js">
+        <link rel="shortcut icon" type="image/x-icon" href="../web/favicon.ico" />
     </head>
     <body>  
         <nav class="navBarmain" id="mainNav">
