--- a/Features/Features.html
+++ b/Features/Features.html
@@ -5,6 +5,7 @@
         <title></title>
         <link rel="stylesheet" href="Sheets/styles.css">
         <script src="Sheets/script.js"></script>   
+        <link rel="shortcut icon" type="image/x-icon" href="../web/favicon.ico" />
     </head>
     <body>      
 
