--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LearnCloud-HomePage</title>
+        <link rel="shortcut icon" type="image/x-icon" href="web/favicon.ico" />
         <link rel="stylesheet" href="Sheets/styles.css">
         <script src="Sheets/script.js"></script>
     </head>
