--- a/About us/About.html
+++ b/About us/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title></title>
+        <title>LearnCloud-AboutUs</title>
         <link rel="stylesheet" href="Sheets/styles.css">
         <script src="Sheets/script.js"></script>
         <link rel="script" href="Sheets/script.js">
