--- a/Features/Features.html
+++ b/Features/Features.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title></title>
+        <title>LearnCloud-Features</title>
         <link rel="stylesheet" href="Sheets/styles.css">
         <script src="Sheets/script.js"></script>   
         <link rel="shortcut icon" type="image/x-icon" href="../web/favicon.ico" />
